<resources>

	<string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

	<string name="app_name">BBQ Diary</string>
	<string name="cut_beef_title">Beef</string>
	<string name="cut_pork_title">Pork</string>
	<string name="cut_poultry_title">Poultry</string>
	<string name="cut_fish_title">Fish</string>
	<string name="cut_vegetable_title">Vegetables</string>
	<string name="cut_other_title">Other</string>
	<string name="ingredient_template">%s%s %s</string>
	<string name="time_min">%1d min</string>
	<string name="order">%1d.</string>
	<string name="ingredients_title">Ingredients</string>
	<string name="ingredients_description">All the needed Ingredients</string>
	<string name="title_step_edit">Edit Steps</string>
	<string name="title_image">Title Image</string>
	<string name="txt_title_landing">WELCOME TO YOUR BBQ DIARY</string>
	<string name="img_category_beef">Category Beef Image</string>
	<string name="img_category_pig">Category Pig Image</string>
	<string name="img_category_poultry">Category Poultry Image</string>
	<string name="img_category_fish">Category Fish Image</string>
	<string name="img_category_vegetable">Category Vegetable Image</string>
	<string name="img_category_other">Category other Image</string>
	<string name="title_pork">Pork</string>
	<string name="cut_category_icon">category icon</string>
	<string name="title_edit_ingredient">Edit Ingredient</string>
	<string name="hint_ingredient_name">Name</string>
	<string name="hint_ingredient_amount">Amount</string>
	<string name="hint_ingredient_unit">Unit</string>
	<string name="cancel">Cancel</string>
	<string name="save">Save</string>
	<string name="delete">delete icon</string>
	<string name="title_new_recipe">Create a new Recipe!</string>
	<string name="rub">Rub</string>
	<string name="hint_Recipe_name">Recipe Name</string>
	<string name="hint_recipe_description_short">Short Description</string>
	<string name="hint_recipe_cooking_style">Cooking Style</string>
	<string name="hint_recipe_duration">Duration in Minutes</string>
	<string name="recipe_button_next">Next</string>
	<string name="title_recipe_edit_finish">All done?</string>
	<string name="btn_recipe_edit_save">Save This Recipe!</string>
	<string name="hint_recipe_description">Description</string>
	<string name="lbl_ingredients_edit">Edit the Ingredients</string>
	<string name="mnu_notes">Notes</string>
	<string name="mnu_edit_recipe">Edit Recipe</string>
	<string name="to_list_overview">To List Overview</string>
	<string name="set_timer">set Timer</string>
	<string name="note_hint_name">Note name</string>
	<string name="note_hint_text">Note Text</string>
	<string name="cooking_style_label">Cooking Style:</string>
	<string name="cooking_time_label">Cooking Time:</string>
	<string name="step_hint_order">Order</string>
	<string name="step_name">Step Name</string>
	<string name="duration_in_minutes">Duration in Minutes</string>
	<string name="description">Description</string>
	<string name="describe_your_recipe">Describe your recipe</string>
	<string name="date_and_time">%s %s</string>
	<string name="notes_title">Notes</string>
	<string name="note_title">Note</string>
	<string name="edit_recipe_title">Edit Recipe</string>
	<string name="cooking_title">Cooking</string>
	<string name="title_recipes">Recipes</string>
	<string name="title_discover">Discover</string>
	<string name="save_recipe">Save Recipe</string>
	<string name="share_recipe">Share Recipe</string>
	<string name="author_text_template">Creator: %s</string>
	<string name="dlg_share_title">To share a Recipe, you first need to log in</string>
	<string name="dlg_share_message">Would you like to Log in now?\nYou can always Log out from the Menu in the top right corner.</string>
	<string name="dlg_share_positive">Yes</string>
	<string name="dlg_share_negative">No</string>
	<string name="toast_recipe_uploaded">Your Recipe is in Review!</string>
	<string name="toast_logged_out">You are now logged out</string>
	<string name="toast_logged_out_error">You couldn\'t be logged out, please try again later.</string>
	<string name="recipe_saved">Recipe saved</string>
	<string name="delete_recipe">Delete Recipe</string>
    <string name="timer_content">%d:%d:%d until finished</string>
	<string name="log_in">Log in</string>
	<string name="log_out">Log out</string>
	<string name="step_dialog_error">Please Provide a Name and Order, or cancel this dialog.</string>
	<string name="ingredient_dialog_error">Please Provide a Name or cancel this dialog.</string>
    <string name="note_not_saved">Note has note been saved, please specify a Name.</string>
</resources>
